--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div class="menu">
         <img src="img/SLIIT_Logo_Crest.png" class="name-image" draggable="false" />
         <div class="name">SLIIT Chat</div>
+        <button class="btn-history btn btn-primary" type="button" id="btnChatHistory"> Chat History</button>
     </div>
     <ol class="chat" id="chat"></ol>
     <form action="" id="form">
