Chat history displaying done

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <div class="name">SLIIT Chat</div>
         <button class="btn-history btn btn-primary" type="button" id="btnChatHistory"> Chat History</button>
     </div>
-    <ol class="chat" id="chat"></ol>
+    <ol class="chat" id="chat">
+        <hr/>
+    </ol>
     <form action="" id="form">
         <input class="textarea" id="m" autocomplete="off" type="text" placeholder="Type here!" /><button type="button" style="display:none">Send</button>
     </form>
